--- a/colorGame.css
+++ b/colorGame.css
@@ -10,10 +10,14 @@ font-family: "Montserrat", "Avenir";
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 15%;
+    transition: background 0.6s;
+    --webkit-transition: background 0.6s;
+    --moz-transition: background 0.6s;
 }
 
 #container {
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 600px;
 }
 
@@ -31,6 +35,10 @@ h1 {
 #colorDisplay{
     font-size: 200%;
 }
+#message{
+    display: inline-block;
+    width: 20%;
+}
 #stripe{
     background: white;
     height: 30px;
@@ -39,5 +47,24 @@ h1 {
 
 }
 .selected {
-    background: blue;
+    color: white;
+    background: steelblue;
+}
+button {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    --webkit-transition: all 0.3s;
+    --moz-transition: all 0.3s;
+}
+
+button:hover{
+    color: white;
+    background: steelblue;
 }
